feat(logout): mobile version
